# filemetrix

./: .gitignore  ARCHITECTURE.mmd  Dockerfile  LICENSE  Makefile  README.md  docker-build.sh  docker-compose.yaml  pyproject.toml
conf/: settings.toml
docs/: CONFIG.md
resources/repos/: repos-list.json
src/filemetrix/: commons.py  db.py  main.py  oai_harvester_client.py  onedata_hugger.py  protected.py  public.py  validate_env.py
src/filemetrix/api/v1/: health.py  pid_fetcher.py  protected.py  public.py  repo_discovery.py  repo_metrics.py  repo_workflow_controller.py
src/filemetrix/infra/: commons.py  db.py
src/filemetrix/services/: oai_harvester_client.py
